<resources>
    <string name="app_name">দোআ ও জিকির সমুহ</string>
    <string name="ayatul">اللّهُ لاَ إِلَـهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَّهُ مَا فِي السَّمَوَاتِ وَمَا فِي الأَرْضِ مَن ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهم وَلاَ يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلاَّ بِمَا شَاء وَسِعَ كُرْسِيُّهُ السَّمَوَاتِ وَالأَرْضَ وَلاَ يَؤُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيمُ</string>
    <string name="Bismillah">بِسۡمِ ٱللهِ ٱلرَّحۡمَـٰنِ ٱلرَّحِيمِ</string>
    <string name="ayauccaron">উচ্চারনঃ আল্লাহু লা ইলাহা ইল্লা হুয়াল হাইয়্যুল ক্বইয়্যুমু লা তা খুজুহু সিনাত্যু ওয়ালা নাউম। লাহু মা ফিছছামা ওয়াতি ওয়ামা ফিল আরদ্। মান যাল্লাযী ইয়াস ফায়ু ইন দাহু ইল্লা বি ইজনিহি ইয়া লামু মা বাইনা আইদিহিম ওয়ামা খল ফাহুম ওয়ালা ইউ হিতুনা বিশাই ইম্ মিন ইল্ মিহি ইল্লা বিমা সাআ ওয়াসিয়া কুরসিইউ হুস ছামা ওয়াতি ওয়াল আরদ্ ওয়ালা ইয়া উদুহু হিফজুহুমা ওয়াহুয়াল আলিয়্যূল আজীম।</string>
    <string name="ayaonubad">অনুবাদঃ আল্লাহ ছাড়া অন্য কোন উপাস্য নেই, তিনি জীবিত, সবকিছুর ধারক। তাঁকে তন্দ্রাও স্পর্শ করতে পারে না এবং নিদ্রাও নয়। আসমান ও যমীনে যা কিছু রয়েছে, সবই তাঁর। কে আছ এমন, যে সুপারিশ করবে তাঁর কাছে তাঁর অনুমতি ছাড়া? দৃষ্টির সামনে কিংবা পিছনে যা কিছু রয়েছে সে সবই তিনি জানেন। তাঁর জ্ঞানসীমা থেকে তারা কোন কিছুকেই পরিবেষ্টিত করতে পারে না, কিন্তু যতটুকু তিনি ইচ্ছা করেন। তাঁর সিংহাসন সমস্ত আসমান ও যমীনকে পরিবেষ্টিত করে আছে। আর সেগুলোকে ধারণ করা তাঁর পক্ষে কঠিন নয়। তিনিই সর্বোচ্চ এবং সর্বাপেক্ষা মহান। [২:২৫৫]</string>
    <string name="hashor">পাপ মুক্তির ২টি অসাধারণ দোয়া \n
======================= \n
১- শিরক বাদে বাকি সব পাপ থেকে মুক্তির দোয়াঃ \n
        হযরত আব্দুর রহমান বিন গানম (রাঃ) হতে বর্ণিত  নবী (সাঃ) বলেন, যে ব্যক্তি মাগরিব ও  \nফজরের নামায থেকে ফিরে বসা ও পা মুড়ার পূর্বে নিম্নোক্ত দোয়াটি ১০ বার পাঠ করবে, \n
«لاَ إِلَهَ إِلاَّ اللَّهُ وَحْدَهُ لاَ شَرِيكَ لَهُ، لَهُ الْمُلْكُ وَلَهُ \nالْحَمْدُ يُحْيِي وَيُمِيتُ وَهُوَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ\n»
(লা ইলা-হা ইল্লাল্লা-হু ওয়াহ্‌দাহু লা শারীকা লাহু,\n লাহুল মূলকু ওয়ালাহুল হাম্‌দু ইয়ুহ্‌য়ী ওয়াইয়ূমীতু ওয়াহুয়া ‘আলা কুল্লি শাই’ইন ক্বাদীর)।\n
“একমাত্র আল্লাহ ছাড়া কোনো হক্ব ইলাহ নেই, তাঁর কোনো শরীক নেই, \nরাজত্ব তারই এবং সকল প্রশংসা তাঁর। তিনিই জীবিত করেন এবং মৃত্যু দান করেন। \nআর তিনি সকল কিছুর উপর ক্ষমতাবান”।
আল্লাহ্‌ তার আমলনামায় প্রত্যেকবারের বিনিময়ে ১০টি নেকি লিপিবদ্ধ করেন\n, ১০টি গোনাহ মোচন করে দেন, তাকে ১০টি মর্যাদায় উন্নীত করেন, প্রত্যেক \nঅপ্রীতিকর বিষয় এবং বিতাড়িত শয়তান থেকে (ঐ যিকির) রক্ষামন্ত্র হয়, নিশ্চিতভাবে শির্ক ব্যতীত তার অন্যান্য পাপ ক্ষমার্হ হয়। আর সে হয় আমল করার দিক থেকে সবচেয়ে শ্রেষ্ঠ ব্যক্তি, তবে সেই ব্যক্তি তার চেয়ে শ্রেষ্ঠ হতে পারে যে তার থেকেও উত্তম যিকির পাঠ করবে”(আহমাদ,সহীহ তারগীব-হাদিস ৪৭২)


</string>
    <string name="hashorbangla">উচ্চারণ :হুয়াল্লাহুল লাজি লা ইলাহা ইল্লা হু আলিমুল গাইবি অসশাহাদাতি হুয়ার রাহমানুর রাহিম। হুয়াল্লাহুল লাজি লা ইলাহা ইল্লা হু আল মালিকুল কুদ্দুসুল সালামুল মুমিনিল মুহাইমিনুল আজিজুল জাব্বারুল মুতাকাব্বির। সুবাহান্নাল্লহুল আম্মা ইয়াস্রিকুন। হুয়াল্লাহুল খারিয়ুল বারিয়ুল মুছাইরুল আল আস্মাউল হুস্না ইউসাব্বিহু লাহু মা ফিসসামাওয়াতি অল আরদ। অহুয়াল আজিজুল হাকিম।</string>
    <string name="hashoronubad">অনুবাদঃত িনিই আল্লাহ তায়ালা, তিনি ব্যাতীত কোন উপাস্য নাই। তিনি দৃশ্য এবং অদৃশ্যকে জানেন। তিনি পরম দয়ালু, অসীম দাতা। তিনি ই আল্লাহ। তিনি ব্যতীত কোন উপাস্য নাই।তিনি ই একমাত্র মালিক, পবিত্র শান্তি অ নিরাপত্তাদাতা, আশ্র‍্যদাতা, পরাক্রান্ত,  প্রতাপান্বিত,  মহাত্শীল। তারা যাকে অংশীদার করে আল্লাহ তায়ালা তা থেকে পবিত্র।  তিনিই আল্লাহ তায়ালা স্রষ্টা, উদ্ভাবক, রুপদাতা, উত্তম  নাম সমুহ তারই। নভোমণ্ডলে অ ভুমন্ডলে যা কিছু আছে সবই তার পবিত্রতা ঘোষনা করে। তিনি পরাক্রান্ত প্রগ্যাময়।</string>
    <string name="ikhlas">قُلْ هُوَ اللَّهُ أَحَد\nٌ اللَّهُ الصَّمَد\nُ لَمْ يَلِدْ وَلَمْ يُولَد\nْ وَلَمْ يَكُن لَّهُ كُفُوًا أَحَدٌ</string>
    <string name="ikhlasbangla">অনুবাদঃ  বলুন, তিনি আল্লাহ, এক, \n আল্লাহ অমুখাপেক্ষী \n তিনি কাউকে জন্ম দেননি এবং কেউ তাকে জন্ম দেয়নি \n এবং তার সমতুল্য কেউ নেই।</string>
</resources>
