<?xml version="1.0" encoding="utf-8"?>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:orientation="vertical"
    tools:context=".AyatulActivity">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Bismillah"
                        android:textSize="25dp"
                        android:background="#e4dfdf"
                        android:textColor="#000"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        />


                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:paddingTop="30dp"
                        android:text="@string/ayatul"
                        android:textColor="#000"
                        android:textIsSelectable="true"
                        android:textSize="30dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ayauccaron"
                        android:padding="20dp"
                        android:textSize="20dp"
                        android:textColor="#000"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ayaonubad"
                        android:padding="20dp"
                        android:textSize="20dp"
                        android:textColor="#000"
                        />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

